--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,9 @@ body {
 .fs-20 {
   font-size: 20px;
 }
+.fs-26 {
+  font-size: 26px;
+}
 .fs-32 {
   font-size: 32px;
 }
@@ -95,6 +98,9 @@ body {
 }
 .jc-start {
   justify-content: start;
+}
+.jc-end {
+  justify-content: end;
 }
 .jc-center {
   justify-content: center;
@@ -192,9 +198,20 @@ label {
 }
 input[type="checkbox"] {
   max-width: 16px;
+  margin-top: 0;
+  accent-color: #0A051E;
+}
+input[type="radio"] {
+  max-width: 24px;
+  height: 24px;
+  margin-top: 0;
+  accent-color: #389E0D;
 }
 .mb-20 {
   margin-bottom: 20px;
+}
+.mb-10 {
+  margin-bottom: 10px;
 }
 .mt-30 {
   margin-top: 30px;
@@ -216,7 +233,7 @@ input[type="checkbox"] {
 }
 .login-button {
   background-color: #03050F;
-  padding: 20px 40px 20px 40px;
+  padding: 12px 40px;
   border-radius: 40px; 
 }
 .error-message {
